--- a/argocd/appset.yaml
+++ b/argocd/appset.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://github.com/akuity/kargo-helm.git
+      repoURL: https://github.com/tianli-zenni/kargo-helm.git
       revision: HEAD
       directories:
       - path: env/*
@@ -18,11 +18,11 @@ spec:
     spec:
       destination:
         namespace: kargo-helm-{{path.basename}}
-        name: demo
+        name: in-cluster
       project: kargo-helm
       source:
         path: charts/guestbook
-        repoURL: https://github.com/akuity/kargo-helm.git
+        repoURL: https://github.com/tianli-zenni/kargo-helm.git
         helm:
           valueFiles:
           - "/env/{{path.basename}}/values.yaml"
