--- a/charts/guestbook/values.yaml
+++ b/charts/guestbook/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/tianli-zenni/guestbook
+  repository: gcr.io/zenni-sre/kargo-helm-guestbook
   pullPolicy: IfNotPresent
   tag: latest
 
